examples/test/testpolicy19881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19881
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key44: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value18
          key45: value19
      podSelector:
        matchLabels:
          key19: value32
          key5: value17
